--- a/aviasales-demo-frontend/package.json
+++ b/aviasales-demo-frontend/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.10.0",
     "prettier": "1.13.6",
-    "save-dev": "^2.0.0"
+    "save-dev": "^2.0.0",
+    "styled-components": "^3.3.3"
   }
 }
