--- a/aviasales-demo-frontend/package.json
+++ b/aviasales-demo-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "flexboxgrid2": "^7.2.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
