--- a/aviasales-demo-frontend/package.json
+++ b/aviasales-demo-frontend/package.json
@@ -7,6 +7,7 @@
     "flexboxgrid2": "^7.2.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-rangeslider": "^2.2.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
